--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -16,26 +16,25 @@
 
         <table class="table">
            <ng-template ngFor let-data [ngForOf]="data?.data" let-groupIndex="index">
-
                 <thead>
                     <tr>
-                        <th class="thead-caption" colspan="5">{{ data.name }}</th>
+                        <th colspan="5" class="thead-group">{{ data.name }}</th>
                     </tr>
                     <tr>
-                        <th>Token</th>
-                        <th>Value</th>
                         <th class="tablecol-700">Explanation</th>
+                        <th>Value</th>
+                        <th>Token</th>
                         <th class="tableglyph"></th>
                         <th class="tableglyph"></th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr *ngFor="let setting of data.settings, let rowIndex = index">
-                        <td>{{ setting?.token }}</td>
-                        <td>{{ setting?.value }}</td>
                         <td class="tablecol-700">{{ setting?.description }}</td>
-                        <td class="tableglyph"><a [routerLink]="'/settings-edit/'+setting?._id" class="fa fa-edit"></a></td>
-                        <td class="tableglyph"><a (click)="delete({ id: setting?._id, groupIndex: groupIndex, rowIndex: rowIndex });" class="fa fa-remove"></a></td>
+                        <td>{{ setting?.value }}</td>
+                        <td>{{ setting?.token }}</td>
+                        <td class="tableglyph" [routerLink]="'/settings-edit/'+setting?._id" ><a class="fa fa-edit"></a></td>
+                        <td class="tableglyph"  (click)="delete({ id: setting?._id, groupIndex: groupIndex, rowIndex: rowIndex });"><a class="fa fa-remove"></a></td>
                     </tr>
                 </tbody>
             </ng-template>
