--- a/src/app/users/users-edit.component.html
+++ b/src/app/users/users-edit.component.html
@@ -86,7 +86,7 @@
                     <div class="form-group row">
                         <label for="address_instructions" class="col-sm-2 control-label">Address</label>
                         <div class="col-sm-10">
-                            <addressform></addressform>
+                            <addressform formControlName="address"></addressform>
                         </div>
                     </div>
 
